# Definitely-Not-The-Prisoner

./: CMakeLists.txt  README.md  TODO.txt
src/: Game.cpp  Game.h  Game.hpp  GameObject.cpp  GameObject.h  Settings.cpp  Settings.h  main.cpp
src/Entities/: Enemy.h  Entity.cpp  Entity.h  Player.cpp  Player.h
src/Environment/: Level.cpp  Level.h
src/Flavour/: Camera.cpp  Camera.h  Cutscene.cpp  Cutscene.h  End.cpp  End.h  Menu.cpp  Menu.h  Pause.cpp  Pause.h
src/Objects/: GameObject.h  Weapon.cpp  Weapon.h
src/Objects/Entities/: Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Player.cpp  Player.h
src/Objects/Weapons/: Projectile.cpp  Projectile.h  Weapon.cpp  Weapon.h
